fixing section two to be aligned right

--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,10 @@ body {
     padding-top: 270px;
 }
 
+.SectionTwo {
+    text-align: right;
+}
+
 section {
     width: 70%;
     padding-left: 15%;
